--- a/playbook.yml
+++ b/playbook.yml
@@ -38,7 +38,7 @@
 
   - name: Copy artidacts from NEXUS
     get_url:
-      url: http://34.209.226.14:8081/nexus/service/local/repositories/red/content/dev/dev/{{BUILD_ID}}/dev-{{BUILD_ID}}.war
+      url: http://34.227.207.180:8081/repository/shiva/QA/Test/{{BUILD_ID}}/Test-{{BUILD_ID}}.war
       dest: /usr/share/tomcat/webapps/
       
       
